# MID_simulations

./: .gitignore  MID_AHRB_demographics.ipynb  MID_sim.ipynb  MID_sim_groupmodel.ipynb  MID_sim_groupmodel_ABCD.ipynb  MID_sim_groupmodel_jittered.ipynb  MID_sim_refactor.ipynb  MID_vif.ipynb  README.md  abcd_duration_differences_by_hit_miss.ipynb  abcd_model_figure.ipynb  all_sims.pkl  collinearity_exploration.ipynb  collinearity_illustration.ipynb  duration_rt_by_condition_outcome.ipynb  env.yml  modeling_mistakes_fig1_generation.ipynb  participants.tsv  pyproject.toml  recode_abcd_onsets.py  requirements.txt  ruff.toml  simulation_funcs.py  simulation_plotting.py  test_simulation.py  understanding_negative_fb_bias.ipynb
.github/workflows/: workflows.yaml
AHRB/: ahrb_events.tgz  participants.json
AHRB/sub-01/ses-1/func/: sub-01_ses-1_task-mid_run-01_events.tsv  sub-01_ses-1_task-mid_run-02_events.tsv
AHRB/sub-02/ses-1/func/: sub-02_ses-1_task-mid_run-01_events.tsv  sub-02_ses-1_task-mid_run-02_events.tsv
JM_simulations/: cue_feedback_bias_exploration.ipynb
manuscript_code/: duration_rt_by_condition_outcome.ipynb  explore_var_choice.ipynb  manuscript_vif_eff.ipynb  modeling_mistakes_fig1_generation.ipynb  vif_explore_dev.ipynb
old/: MID_sim_group_fullmodel_manuscript.ipynb  MID_sim_groupmodel_ABCD.ipynb  MID_sim_groupmodel_jittered.ipynb  Makefile  bidsify_abcd_onsets.ipynb
older_notebooks/: MID_sim.ipynb  MID_sim_refactor.ipynb
src/mid_simulations/: simulation_funcs.py  simulation_plotting.py
tests/: test_simulation_funcs.py
(+213 files in other folders)
